Enabled preview features, ready for using pattern-matching switch.